<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.snhu</groupId>
	<artifactId>ssl-server</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ssl-server</name>
	<description>ssl-server skeleton for CS-305</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.9</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			
			<!-- Spotless plugin for code formatting -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.27.2</version>
				<configuration>
					<java>
						<!-- Apply to all Java files -->
						<includes>
							<include>src/main/java/**/*.java</include>
							<include>src/test/java/**/*.java</include>
						</includes>
						
						<!-- Use Google Java Format -->
						<googleJavaFormat>
							<version>1.7</version>
							<style>GOOGLE</style>
						</googleJavaFormat>
						
						<!-- Remove unused imports -->
						<removeUnusedImports />
						
						<!-- Format imports -->
						<importOrder>
							<order>java,javax,org,com</order>
						</importOrder>
						
						<!-- Ensure files end with newline -->
						<endWithNewline />
						
						<!-- Remove trailing whitespace -->
						<trimTrailingWhitespace />
					</java>
					
					<!-- Format other file types -->
					<formats>
						<!-- Format Markdown files -->
						<format>
							<includes>
								<include>*.md</include>
								<include>**/*.md</include>
							</includes>
							<endWithNewline />
							<trimTrailingWhitespace />
						</format>
					</formats>
				</configuration>
				<executions>
					<!-- Check formatting during validate phase -->
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
